# raylib_stuff

./: CMakeLists.txt
demos/01_window/: 01_switch_bg_color.c  CMakeLists.txt
demos/02_primitives/: 01_pixel_snowing.c  01_pixels_cloud.c  01_pixels_sparks.c  02_lines_snowflake.c  CMakeLists.txt
games/: CMakeLists.txt  arkanoid.c  ping_pong.c
games/arkanoid/: CMakeLists.txt  main.c
games/arkanoid/include/: ball.h  brick.h  collisions.h  config_data.h  game.h  hud.h  map_generator.h  maps.h  paddle.h  ui.h
games/arkanoid/src/: ball.c  brick.c  collisions.c  game.c  hud.c  map_generator.c  paddle.c  screen_settings.c  ui.c
games/ecs/ping_pong_ecs/: CMakeLists.txt  main.c  totos.txt
games/ecs/ping_pong_ecs/include/: assets.h  config.h  game.h  world.h
games/ecs/ping_pong_ecs/include/components/: component_all.h  component_ball.h  component_collider.h  component_input.h  component_music.h  component_paddle.h  component_phys.h  component_render.h  component_score.h  component_sound.h  component_transform.h
games/ecs/ping_pong_ecs/include/systems/: system_all.h  system_collisions.h  system_input.h  system_music.h  system_render.h  system_score.h  system_sound.h  system_transform.h
games/ecs/ping_pong_ecs/src/: game.c  world.c
games/ecs/ping_pong_ecs/src/systems/: system_collisions.c  system_input.c  system_music.c  system_render.c  system_score.c  system_sound.c  system_transform.c
games/ecs/tds_ecs/: CMakeLists.txt
games/ecs/tds_ecs/include/: config.h  world.h
games/ping_pong_game/: CMakeLists.txt  ping_pong_v2.c
games/platformer/: CMakeLists.txt  main.c
games/platformer/include/: config_data.h  game.h  platform.h  player.h  screen_settings.h
games/platformer/src/: game.c  platform.c  player.c  screen_settings.c
games/snake/: CMakeLists.txt  main.c
games/snake/include/: audio.h  collisions.h  config.h  config_data.h  food.h  game.h  hud.h  markings.h  screen.h  screen_settings.h  snake.h  utils.h
games/snake/src/: audio.c  collisions.c  config.c  food.c  game.c  hud.c  markings.c  screen.c  screen_settings.c  snake.c  utils.c
lessons/01_window/: 01_window.c  02_scaling.c  CMakeLists.txt
lessons/02_primitives/: 01_pixels.c  02_lines.c  03_triangles.c  04_rects.c  CMakeLists.txt
test_stuff/: CMakeLists.txt  stuff.c
