add_executable(01_pixels_cloud 01_pixels_cloud.c)
target_link_libraries(01_pixels_cloud raylib m)

add_executable(01_pixels_sparks 01_pixels_sparks.c)
target_link_libraries(01_pixels_sparks raylib m)

add_executable(01_pixel_snowing 01_pixel_snowing.c)
target_link_libraries(01_pixel_snowing raylib m)

add_executable(02_lines_snowflake 02_lines_snowflake.c)
target_link_libraries(02_lines_snowflake raylib m)
