add_executable(01_pixels 01_pixels.c)
target_link_libraries(01_pixels raylib m)

add_executable(02_lines 02_lines.c)
target_link_libraries(02_lines raylib m)

add_executable(03_triangles 03_triangles.c)
target_link_libraries(03_triangles raylib m)

add_executable(04_rects 04_rects.c)
target_link_libraries(04_rects raylib m)
